fixed grid gap from margin

--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ header a {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 64px;
 }
 section {
   max-width: 1200px;
